# relax-my-eyes

./: .gitignore  README.md  build_mac.sh  build_unix.sh
src/: ApplicationHelper.cpp  ApplicationHelper.h  ApplicationHelper.mm  CMakeLists.txt  Info.plist  LaunchAgents.cpp  LaunchAgents.h  MessageBoxBreak.cpp  MessageBoxBreak.h  MessageBoxBreak.ui  Options.cpp  Options.h  Options.qrc  Options.ui  Sound.cpp  Sound.h  Sound.mm  SoundUnix.cpp  SystemIdleTime.cpp  SystemIdleTime.h  SystemIdleTime.mm  SystemIdleTimeUnix.cpp  Timer.cpp  Timer.h  main.cpp
